--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -8,8 +8,10 @@
 </head>
 <body>
 <nav class="navbar background">
-	<ul class="nav-list">
-		<div class="logo"><img src="logo.jpg" alt="logo"></div>
+	<div class="logo">
+		<img src="logo.jpg" alt="logo">
+		</div>
+	    <ul class="nav-list">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="portfolio.html">Portfolio</a></li>
 		<li> <a href="contact.html">Contact</a></li>
@@ -21,17 +23,16 @@
 		<button class="btn">search</button>
 	</div>
 </nav>
-<section class=" background first">
+<div class=" background first">
 	<div class="main">
 		<div class="firstsec">
-			<p class="text1">Welcome to my website</p>
-			<p class="text2">Hello! my name is rohan ghimire.This is my first website.</p>
+			<h2 class="text1">WELCOME TO MY WEBSITE</h2>
+			<h2 class="text2">Hello! my name is rohan ghimire.</h2>
 		</div>
 		<div class="secondsec">
 			<img src="rohan.jpg" alt="my image">
 		</div>
 	</div>
-</section>
-</section>
+</div>
 </body>
 </html>
