home page edited

--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav class="navbar background">
-	<div class="logo">
-		<img src="logo.jpg" alt="logo">
-		</div>
-	    <ul class="nav-list">
+	<div class="burger background">
+		<div class="burger1"></div>
+		<div class="burger1"></div>
+		<div class="burger1"></div>
+	</div>
+<nav class="navbar background navbar-resp">
+        <ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="portfolio.html">Portfolio</a></li>
 		<li> <a href="contact.html">Contact</a></li>
 		<li> <a href="cv.html">CV</a></li>
 		<li> <a href="sitereport.html">Sitereport</a></li>
 	</ul>
-	<div class="rightnav">
+	<div class="rightnav rightnav-resp">
+		<form action="https://www.w3schools.com/">
 		<input type="text" name="search">
-		<button class="btn">search</button>
+		<button class="btn" type="submit">search</button>
+		</form>
 	</div>
 </nav>
 <div class=" background first">
@@ -34,5 +38,9 @@
 		</div>
 	</div>
 </div>
+<div class="copyright">
+	<h2 class=" background copyrightmessage">&copy;Copyright @ ROHAN GHIMIRE 2021</h2>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
