--- a/cv.html
+++ b/cv.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>cv</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+<title>cv</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body class="body2">
 <nav class="navbar">
 	<ul class="nav-list">
 		<li> <a href="index.html">Home</a></li>
@@ -19,32 +19,35 @@
 	</div>
 </nav>
 <div class="layout">
-<center><h2 class="Resume">My Resume</h2></center>
-<center><img src="rohan.jpg" height="100px" width="110px" alt="CV image"></center>
-<center><h2>Rohan ghimire</h2></center>
-<center><p> kathmandu,kalanki</p></center>
-<center><p>9819134038</p></center>
-<center><h2 class="career">Career Objective</h2></center>
-<center><p>After I complete my bachleor in Networking <br>i just want to work for the finest company as <br>network specialist and continue my further degree  in abroad.</p></center>
-<center><h2 class="pinformation">Personal information</h2></center>
-<center><p> First Name:Rohan</p></center>
-<center><p> Last Name:Ghimire</p></center>
-<center><p>Email:ghimirerohan0@gmail.com</p></center>
-<center><p> Nationality:Nepali</p></center>
-<center><p>National ID NO:43-01-76-05904</p></center>
-<center><p>Religion:Hindu</p></center>
-<center><p>Gender:Male</p></center>
-<center><h2 class="workingexp">Working Experience</h2></center>
-    <center><p>None</p></center>
-    <center><h2 class="qualification">Qualification</h2></center>
-    <center><table border="2px">
-    	<th>Qualification</th>
+<h2 class="Resume">My Resume</h2>
+<img src="rohan.jpg" class="rohan1" alt="CV image">
+<h2>Rohan ghimire</h2>
+<p> kathmandu,kalanki</p>
+<p>9819134038</p>
+<h2 class="pinformation">Personal information</h2>
+<p> First Name:Rohan</p>
+<p> Last Name:Ghimire</p>
+<p>Email:ghimirerohan0@gmail.com</p>
+<p> Nationality:Nepali</p>
+<p>National ID NO:43-01-76-05904</p>
+<p>Religion:Hindu</p>
+<p>Gender:Male</p>
+<h2 class="skills">skills</h2>
+   <p>Programming</p>
+   <p>Editing</p>
+   <p>linux basics</p>
+   <h2 class="qualification">Qualification</h2>
+   <table class="table1">
+   	   <thead>
+   	   	<tr>
+        <th>Qualification</th>
     	<th>board</th>
     	<th>grade</th>
     	<th>year</th>
+          </tr>
+        </thead>
 
-
-         <tr>
+        <tr>
     	<td>SEE</td>
     	<td>NEB</td>
     	<td>A</td>
@@ -57,8 +60,7 @@
     	<td>AAA</td>
     	<td>2076</td>
     	</tr>
-
-   
-</div>
-</body>
-</html>
+    </table>
+    </div>
+    </body>
+    </html>
