--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>contact</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav class="navbar">
-	<ul class="nav-list">
+	<div class="burger">
+		<div class="burger1"></div>
+		<div class="burger1"></div>
+		<div class="burger1"></div>
+	</div>
+<nav class="navbar navbar-resp">
+	<ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="portfolio.html">Portfolio</a></li>
 		<li> <a href="#contact">Contact</a></li>
 		<li> <a href="cv.html">CV</a></li>
 		<li> <a href="sitereport.html">Sitereport</a></li>
 	</ul>
-	<div class="rightnav">
+	<div class="rightnav rightnav-resp">
 		<input type="text" name="search">
 		<button class="btn">search</button>
 	</div>
@@ -28,5 +35,6 @@
     <button type="submit" class="btnb">click here</button>
     </form>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
