cv page completed

--- a/cv.html
+++ b/cv.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>cv</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="body2">
-<nav class="navbar">
-	<ul class="nav-list">
+	<body class="body1">
+	<div class="burger">
+		<div class="burger1"></div>
+		<div class="burger1"></div>
+		<div class="burger1"></div>
+	</div>
+<nav class="navbar navbar-resp">
+	<ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="portfolio.html">Portfolio</a></li>
 		<li> <a href="contact.html">Contact</a></li>
 		<li> <a href="#cv">CV</a></li>
 		<li> <a href="sitereport.html">Sitereport</a></li>
 	</ul>
-	<div class="rightnav">
+	<div class="rightnav rightnav-resp">
 		<input type="text" name="search">
 		<button class="btn">search</button>
 	</div>
@@ -62,5 +69,6 @@
     	</tr>
     </table>
     </div>
+    <script src="script.js"></script>
     </body>
     </html>
