contact page edited/completed

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<title>contact</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body class="body1">
 	<div class="burger">
 		<div class="burger1"></div>
 		<div class="burger1"></div>
@@ -34,6 +34,13 @@
 	<input type="text" class="message" placeholder="your message"><br>
     <button type="submit" class="btnb">click here</button>
     </form>
+</div>
+<div class="myinfo">
+	<div class="myinformation">My Information</div>
+	<div class="myname">Name:Rohan Ghimire</div>
+	<div class="address">Address:Kalanki,Kathmandu</div>
+	<div class="phoneno">PH.Number:9819134038</div>
+	<div class="email1">Email:ghimirerohan0@gmail.com</div>
 </div>
 <script src="script.js"></script>
 </body>
