contact page completed

--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!--heading of html file-->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>contact</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>contact</title> <!--Title of webpage-->
+	<link rel="stylesheet" type="text/css" href="style.css"> <!--linking css to html-->
 </head>
-<body class="body1">
-	<div class="burger">
+<body class="body1"> <!--starting of body(all content of page are inside body tag)-->
+	<div class="burger"> <!--div to create burger-->
 		<div class="burger1"></div>
 		<div class="burger1"></div>
 		<div class="burger1"></div>
 	</div>
-<nav class="navbar navbar-resp">
+<nav class="navbar navbar-resp"> <!--navigation menu-->
 	<ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="portfolio.html">Portfolio</a></li>
@@ -42,6 +42,6 @@
 	<div class="phoneno">PH.Number:9819134038</div>
 	<div class="email1">Email:ghimirerohan0@gmail.com</div>
 </div>
-<script src="script.js"></script>
-</body>
-</html>
+<script src="script.js"></script> <!--linking js to html-->
+</body> <!--body ends here-->
+</html> <!--end of html-->
