cv page completed

--- a/cv.html
+++ b/cv.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!--heading of html-->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>cv</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+<title>cv</title><!--title of webpage-->
+<link rel="stylesheet" type="text/css" href="style.css"><!--linking of css to html page-->
+</head><!--heading ends here-->
 	<body class="body1">
 	<div class="burger">
 		<div class="burger1"></div>
 		<div class="burger1"></div>
 		<div class="burger1"></div>
 	</div>
-<nav class="navbar navbar-resp">
+<nav class="navbar navbar-resp"> <!--navigation menu-->
 	<ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="portfolio.html">Portfolio</a></li>
@@ -24,7 +24,7 @@
 		<input type="text" name="search">
 		<button class="btn">search</button>
 	</div>
-</nav>
+</nav><!--nav ends here-->
 <div class="layout">
 <h2 class="Resume">My Resume</h2>
 <img src="rohan.jpg" class="rohan1" alt="CV image">
@@ -44,7 +44,7 @@
    <p>Editing</p>
    <p>linux basics</p>
    <h2 class="qualification">Qualification</h2>
-   <table class="table1">
+   <table class="table1"> <!--table for my qualification info-->
    	   <thead>
    	   	<tr>
         <th>Qualification</th>
@@ -69,6 +69,6 @@
     	</tr>
     </table>
     </div>
-    <script src="script.js"></script>
-    </body>
-    </html>
+    <script src="script.js"></script> <!--linking js to html-->
+    </body> <!--all contents inside body tag ends here-->
+    </html><!--end of html page-->
