home page completed

--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!--starting of header-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>home page</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>home page</title><!--title of webpage-->
+	<link rel="stylesheet" type="text/css" href="style.css"> <!--linking of css to html file-->
 </head>
-<body>
+<body>   <!--starting of body(all content of page are inside body tag)--> 
 	<div class="burger background">
 		<div class="burger1"></div>
-		<div class="burger1"></div>
+		<div class="burger1"></div>   {<!--div class to make burger-->}
 		<div class="burger1"></div>
 	</div>
 <nav class="navbar background navbar-resp">
         <ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
-		<li> <a href="portfolio.html">Portfolio</a></li>
+		<li> <a href="portfolio.html">Portfolio</a></li>     {<!--navigation menu-->}
 		<li> <a href="contact.html">Contact</a></li>
 		<li> <a href="cv.html">CV</a></li>
 		<li> <a href="sitereport.html">Sitereport</a></li>
 		
 	</ul>
 	<div class="rightnav rightnav-resp">
-		<form action="https://www.w3schools.com/">
-		<input type="text" name="search">
+		<form action="https://www.w3schools.com/"> <!--used action tag to redirect page if someone click search-->
+		<input type="text" name="search">  
 		<button class="btn" type="submit">search</button>
 		</form>
 	</div>
@@ -40,8 +40,8 @@
 	</div>
 </div>
 <div class="copyright">
-	<h2 class=" background copyrightmessage">&copy;Copyright @ ROHAN GHIMIRE 2021</h2>
+	<h2 class=" background copyrightmessage">&copy;Copyright @ ROHAN GHIMIRE 2021</h2> <!--copyright message-->
 </div>
-<script src="script.js"></script>
-</body>
-</html>
+<script src="script.js"></script><!--linking of js to html-->
+</body> <!--end of body tag-->
+</html> <!--html end here-->
