--- a/sitereport.html
+++ b/sitereport.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!--document header-->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>sitereport</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body class="body1">
-	<div class="burger">
+	<title>sitereport</title> <!--page title-->
+	<link rel="stylesheet" type="text/css" href="style.css"> <!--linking of stylesheet to html file-->
+</head> <!-- document header ends-->
+<body class="body1"> <!--starting of body(content are all written inside body)-->
+	<div class="burger"> <!--div to create burger-->
 		<div class="burger1"></div>
 		<div class="burger1"></div>
 		<div class="burger1"></div>
 	</div>
-<nav class="navbar navbar-resp">
+<nav class="navbar navbar-resp"> <!--navigation bar-->
 	<ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="portfolio.html">Portfolio</a></li>
@@ -25,7 +25,7 @@
 		<button class="btn">search</button>
 	</div>
 </nav>
-<h1 class="previously">Previously</h1>
+<h1 class="previously">Previously</h1> <!--contains screenshot of progess of my pages-->
 <div class="grid-container4">
 <div class="progress">
 	<img src="progress1.png" alt="previoushomepage" class="progress1">
@@ -34,7 +34,7 @@
 	<img src="progress2.png" alt="previousportfolio" class="progress3">
 </div>
 </div>
-<h1 class="finalimage">Final images</h1>
+<h1 class="finalimage">Final images</h1> <!-- contains final image of each page of the website-->
 <div class="grid-container2">
    <div class="homepagegrid">
    	<img src="homepage.png" alt="homepagescreenshot" class="homepage1">
@@ -49,7 +49,7 @@
    	<img src="cvpage.png" alt="cvpagesccrenshot" class="cvpage1">
    </div>
 </div>
-<h1 class="validationcheck">Validation Check</h1>
+<h1 class="validationcheck">Validation Check</h1> <!--contains screenshot of validation pages-->
 <div class="grid-container3">
 	<div class="homepagevalidation">
 		<img src="validation1.png" alt="homepagevalidation" class="homevalid1">
@@ -70,15 +70,15 @@
 		<img src="validation6.png" alt="sitereportvalidation" class="sitereportvalid1">
 	</div>
 </div>
-<h1 class="description">Description</h1>
+<h1 class="description">Description</h1> <!--contains description of my website-->
 <p class="describe">At the home page from the image, one can see a navigation bar at the top of the page and it contains a search option at the right nav of the page Though I haven't got any knowledge of backend language to make the search button functional and people can actually search anything but I have used action tag to redirect the page to different page if someone actually clicks the search button.I have added hamburger icon in the nav menu which is only visible in responsive view and the same icon is added to all other pages too. There is a beautiful background image in the body which covers the entire homepage. And as per the content, I have added a text message saying"welcome to my website" and added some animation to the text. The Website is about my portfolio so I have added my photo to the home page and finally I have added a copyright message in the footer of my homepage. As for the portfolio page, I have added a navigation menu same as the home page. Portfolio pages contain information, project, the skill of a person but I haven't done any projects yet so I have uploaded some dummy images downloaded from google on the page which will be replaced by my own project in term ii. I have used the Grid property to make images in column order. As for the contact page, I have made it so simple as I have included the navigation bar same as other pages and made a contact form, Though any information written/submitted in the form won’t get to me because we haven't got any knowledge of PHP to make a formwork but I have added action tag to make the form look better, so if someone clicks on the submit button the page gets redirected to another page and I have given few information about myself and contact info below the form. For the cv page, i have added my photo at the top and added my personal information, skills, qualification. I haven't used any flashy things on the cv page just added a background and used simple tags to make my cv page.The sitepeport page contains images of all my pages,html and css validation,description about my pages,learning experience and refrence of few images and code i have taken from different pages</p>
-<h1 class="learningexp">Learning experience of Web Development</h1>
+<h1 class="learningexp">Learning experience of Web Development</h1> <!--about my learning experience of web development-->
 <p class="learningexperience">There were few ups and downs while learning Web Development and we did remove all the obstacles while Learning. As per my view, we had a great learning environment at NAMI and as for web development, it was the best learning experience than any other subject we have read yet. We went from bottom(Github, Github commands, pushing code in Github) to the peak of HTML and CSS. There was not much issue while learning HTML, CSS because we used to have more Tutorial classes. All the things taught in the lecture class were completed in the tutorial class within the week, So we didn’t had many issues while Learning. We did face some issues while pushing code to GitHub, Creating HTML pages, Writing CSS codes but all of them were solved in the Tutorial class by the modular leader. There were many expectations while studying web development, Though many of the expectations were reached I did had few expectations for the term(i). Firstly I thought we will be learning all the things of responsive view to make the website look beautiful in mobile/desktop view. We did learn about the responsive view but we were just given few ideas and taught to fire media query. From whats given in the assignment I thought we will also be learning few javascript codes in term(i) so everyone could have done much better in making the website responsive, beautiful. So, the certain expectation were not met according to me but I have tried my best to make the website unornamented/simple Though certain things are missing in the website as per my view and will be doing my best in term(ii).Besides certain things, I enjoyed learning about HTML and CSS a lot.</p>
-<h1 class="refrencing">Refrences</h1>
+<h1 class="refrencing">Refrences</h1> <!--contains refrences of some ideas and photos taken to make webpage-->
 <p class="ref1">Background.jpg=(albari, h., n.d. https://www.pexels.com/photo/silver-and-black-laptop-computer-1229861. [online] pexels. Available at: https://www.pexels.com/ [Accessed 29 May 2021].)</p>
 <p class="ref2">script.js=CodingNepal, 2019. Youtube. [Online] Available at: https://www.youtube.com/watch?v=tEC4kqzNTnM
 [Accessed 18 06 2021]</p>
 <p class="ref3">portfoliopage images= (n.d) placeimg. n.d. [online] Available at: https://placeimg.com/ [Accessed 1 June 2021].</p>
-<script src="script.js"></script>
-</body>
+<script src="script.js"></script> <!--linking js to html file-->
+</body> <!-- ending of content/body closing-->
 </html>
