--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<title>contact</title> <!--Title of webpage-->
 	<link rel="stylesheet" type="text/css" href="style.css"> <!--linking css to html-->
 </head>
-<body class="body1"> <!--starting of body(all content of page are inside body tag)-->
+<body class="body1"> <!--starting of body all content of page are inside body tag-->
 	<div class="burger"> <!--div to create burger-->
 		<div class="burger1"></div>
 		<div class="burger1"></div>
