--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>   <!--starting of body(all content of page are inside body tag)--> 
 	<div class="burger background">
 		<div class="burger1"></div>
-		<div class="burger1"></div>   {<!--div class to make burger-->}
+		<div class="burger1"></div>   <!--div class to make burger-->
 		<div class="burger1"></div>
 	</div>
 <nav class="navbar background navbar-resp">
         <ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
-		<li> <a href="portfolio.html">Portfolio</a></li>     {<!--navigation menu-->}
+		<li> <a href="portfolio.html">Portfolio</a></li>     <!--navigation menu-->
 		<li> <a href="contact.html">Contact</a></li>
 		<li> <a href="cv.html">CV</a></li>
 		<li> <a href="sitereport.html">Sitereport</a></li>
