portfolio page completed

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	<title>portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="body1">
+<body class="body1"> <!--starting of body(all content of page are inside body tag)-->
 	<div class="burger">
 		<div class="burger1"></div>
 		<div class="burger1"></div>
@@ -16,7 +16,7 @@
 	<ul class="nav-list ul-resp">
 		<li> <a href="index.html">Home</a></li>
 		<li> <a href="#portfolio">Portfolio</a></li>
-		<li> <a href="contact.html">Contact</a></li>
+		<li> <a href="contact.html">Contact</a></li>              <!--navigation menu-->
 		<li> <a href="cv.html">CV</a></li>
 		<li> <a href="sitereport.html">Sitereport</a></li>
 	</ul>
@@ -25,27 +25,27 @@
 		<button class="btn">search</button>
 	</div>
 	</nav>
-	<div class="grid-container">
+	<div class="grid-container"> <!--using grid property to manage images in proper order-->
 		<div class="grid1">
-			<img src="image1.jpg" alt="image1" class="img1">
+			<img src="image1.jpg" alt="image1" class="img1"> <!--(Anon, n.d.)-->
 		</div>
 		<div class="grid2">
-			<img src="image2.jpg" alt="image2" class="img2">
+			<img src="image2.jpg" alt="image2" class="img2"> <!--(Anon, n.d.)-->
 		</div>
 		<div class="grid3">
-			<img src="image3.jpg" alt="image3" class="img3">
-		</div>
+			<img src="image3.jpg" alt="image3" class="img3"> <!--(Anon, n.d.)-->
+		</div>                                                                    <!--six div classes which contains images-->
 		<div class="grid4">
-			<img src="image4.jpg" alt="image4" class="img4">
+			<img src="image4.jpg" alt="image4" class="img4"> <!--(Anon, n.d.)-->
 		</div>
 		<div class="grid5">
-			<img src="image5.jpg" alt="image5" class="img5">
+			<img src="image5.jpg" alt="image5" class="img5"> <!--(Anon, n.d.)-->
 		</div>
 		<div class="grid6">
-			<img src="image6.jpg" alt="image6" class="img6">
+			<img src="image6.jpg" alt="image6" class="img6"> <!--(Anon, n.d.)-->
 		</div>
 	</div>
        <h3 class="heading3">Above are all the dummy images downloaded from google.<br>All images will be replaced after i do my own project in term(ii).</h3>
-       <script src="script.js"></script>
-</body>
+       <script src="script.js"></script><!--linking of js to html-->
+</body><!--body tag ends here-->
 </html>
