contact page completed

--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
 <h1 class="contactme">Contact Me</h1>
 <div class="contact">
 	<form action="https://accounts.google.com/">
-	<input type="text" class="fname" placeholder="type your first name"><br>
-	<input type="text" class="lname" placeholder="type your last name"><br>
-	<input type="text" class="email" placeholder="type your email"><br>
-	<input type="text" class="message" placeholder="your message"><br>
-    <button type="submit" class="btnb">click here</button>
+	<input type="text" class="fname" placeholder="type your first name here"><br>
+	<input type="text" class="lname" placeholder="type your last name here"><br>
+	<input type="text" class="email" placeholder="type your email here"><br>
+	<input type="text" class="message" placeholder=" type your message here"><br>
+    <button type="submit" class="btnb">submit</button>
     </form>
 </div>
 <div class="myinfo">
