--- a/cv.html
+++ b/cv.html
@@ -30,19 +30,19 @@
 <img src="rohan.jpg" class="rohan1" alt="CV image">
 <h2>Rohan ghimire</h2>
 <p> kathmandu,kalanki</p>
-<p>9819134038</p>
 <h2 class="pinformation">Personal information</h2>
 <p> First Name:Rohan</p>
 <p> Last Name:Ghimire</p>
 <p>Email:ghimirerohan0@gmail.com</p>
 <p> Nationality:Nepali</p>
 <p>National ID NO:43-01-76-05904</p>
-<p>Religion:Hindu</p>
 <p>Gender:Male</p>
 <h2 class="skills">skills</h2>
    <p>Programming</p>
    <p>Editing</p>
    <p>linux basics</p>
+   <h2 class="careerobj">Career objective</h2>
+   <p>After completing my bachleors in Networking i want to work for one of the finest company being network specialist.</p>
    <h2 class="qualification">Qualification</h2>
    <table class="table1"> <!--table for my qualification info-->
    	   <thead>
